fixed dropdown menus on mobile navigation menus

--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 Theme Name: Glades
 Theme URI: https://themezee.com/themes/glades/
 Description: Glades is a modern Magazine Theme for a local news or any other content focused website. The magazine-styled homepage is built with WordPress core features like Customizer and Widgets, which makes the setup super fast, flexible and easy. The theme comes with a beautiful Featured Content area and responsive design, looking great on every device.
-Version: 1.2.2
+Version: 1.2.3
 Author: ThemeZee
 Author URI: https://themezee.com
 Tags: two-columns, light, blue, custom-background, custom-header, custom-menu, editor-style, blog, news, featured-image-header, featured-images, flexible-header, custom-colors, full-width-template, sticky-post, threaded-comments, translation-ready, theme-options, fluid-layout, responsive-layout, one-column, left-sidebar, right-sidebar, three-columns, black, red, silver, white, green, gray
@@ -1962,13 +1962,17 @@ embed, iframe, object, video {
 		border: none;
 		box-shadow: none;
 		background: none;
-		top: 0;
-		left: 0;
+		top: auto;
+		left: auto;
 	}
-	.top-navigation-menu li:hover ul ul, .top-navigation-menu li:hover ul ul ul, .top-navigation-menu li:hover ul ul ul ul,
-	.top-navigation-menu li:hover ul, .top-navigation-menu li li:hover ul, .top-navigation-menu li li li:hover ul, .top-navigation-menu li li li li:hover ul
-	{
-		display: inline;
+	.top-navigation-menu li,
+	.top-navigation-menu ul,
+	.top-navigation-menu li ul ul {
+		position: static;
+		display: block;
+		left: auto;
+		top: auto;
+		clear: left;
 	}
 
 	#topnav-toggle-tablet {
@@ -2123,18 +2127,22 @@ embed, iframe, object, video {
 		border: none;
 		box-shadow: none;
 		background: none;
-		top: 0;
-		left: 0;
+		top: auto;
+		left: auto;
 	}
+	.main-navigation-menu li,
 	.main-navigation-menu ul,
+	.main-navigation-menu li ul ul,
 	.mega-menu-item .mega-menu-content,
 	.mega-menu-item .mega-menu-content .mega-menu-widget {
 		position: static;
 		display: block;
 		left: auto;
 		top: auto;
+		clear: left;
 	}
 
+	/* Main Navigation Toggle */
 	#mainnav-toggle {
 		float: right;
 		display: inline-block;
@@ -2261,6 +2269,10 @@ embed, iframe, object, video {
 	}
 
 	/* Mega Menu Styling */
+	.mega-menu-item .mega-menu-content {
+		color: #fff;
+	}
+
 	.mega-menu-item .mega-menu-two-columns > li,
 	.mega-menu-item .mega-menu-three-columns > li,
 	.mega-menu-item .mega-menu-five-columns > li {
